--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,10 +6,16 @@ pipeline{
                     sh "pwd"
             }
         }
-        stage("apt install apache2"){
+        stage("maven install"){
             steps{                
-                    sh "sudo apt install apache2 -y"
+                    sh "sudo apt install maven -y"
             }
         } 
+         stage("gitclone petclinc"){
+            steps{                
+                    git url:"https://github.com/spring-projects/spring-petclinic.git",branch:"main"
+            }
+        } 
+
     }
 }
